# PopOut

./: .gitignore  README.md  README_Iris_ID3.md  game functions.py  iris_id3_notebook.ipynb  mcts_quality_time_comparison.html  mcts_quality_time_comparison.ipynb  project_architecture.md  pyproject.toml  requirements.txt
src/: discretizer.py  id3.py  metrics.py  play_popout.py  pop_out.py  visualizer.py
src/DecisionTreePopOut/: MCTS_popout_dataset.csv  MCTS_popout_dataset_1.csv  MCTS_popout_dataset_2.csv  MCTS_popout_dataset_4.csv  MCTS_popout_dataset_MCTS_x_DT  generate_dataset.py  generate_mcts_x_dt.py  generate_mcts_x_mcts.py  merge_datasets.py  pop_out_DT.py  popout_DT_model.pkl  popout_tree.dot  train_tree.py
src/MCTS/: MCTS.py  README.md  TicTacToe.py  mcts_service.py  tic_tac_toe.py
src/decision_tree/: README.md  id3_decision_tree.py  metrics.py  tree_node.py
src/mcts/: README.md  mcts_service.py  mcts_service_mock.py  mcts_service_parallel.py  pop_out_mcts.py  pop_out_mcts_parallel.py
src/popout_decision_tree/: play_popout_dt.py  train_popout_dt.py
src/popout_decision_tree/data_preparation/: README.md  __init__.py  common.py  generate_dataset.py  mcts_vs_dt.py  mcts_vs_mcts.py  random_vs_mcts.py
src/popout_decision_tree/datasets/: complete_popout_dataset.csv  popout_DT_model.pkl  popout_tree.dot
src/popout_decision_tree/datasets/legacy/: MCTS_popout_dataset_3.csv  MCTS_popout_dataset_5.csv  MCTS_popout_dataset_6.csv  MCTS_popout_dataset_MCTS_x_MCTS.csv
