[project]
name = "artificial-intelligence"
version = "0.1.0"
requires-python = ">=3.12"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "PL",
]

ignore = [
    "PLR2004",
]

[tool.ruff.lint.pylint]
max-args = 5
max-statements = 50
